chore: update docker-compose configuration and package.json scripts
- Changed PostgreSQL and Redis ports in docker-compose.yml for better port management.
- Updated backend and frontend service configurations, including working directories and environment variables.
- Added new Docker-related scripts to package.json for improved development workflow.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
+    "docker:restart": "docker-compose restart",
+    "docker:rebuild": "docker-compose up -d --build",
+    "docker:stop": "docker-compose stop",
+    "docker:ps": "docker-compose ps",
+    "docker:clean": "docker-compose down -v",
     "typecheck": "bun run --filter '*' typecheck"
   },
   "devDependencies": {
