--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: devtools
       POSTGRES_PASSWORD: devtools
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -23,7 +23,7 @@ services:
     image: redis:7-alpine
     container_name: devtools-redis
     ports:
-      - '6379:6379'
+      - '6380:6379'
     volumes:
       - redis_data:/data
     healthcheck:
@@ -35,47 +35,49 @@ services:
   # Backend API
   backend:
     build:
-      context: ./packages/backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: packages/backend/Dockerfile
     container_name: devtools-backend
     depends_on:
       postgres:
         condition: service_healthy
     environment:
-      PORT: 4000
+      PORT: 4001
       NODE_ENV: development
       DATABASE_URL: postgresql://devtools:devtools@postgres:5432/nest_devtools
       REDIS_URL: redis://redis:6379
       DEVTOOLS_API_KEY: ${DEVTOOLS_API_KEY:-changeme-secret-key}
-      CORS_ORIGINS: http://localhost:3000,http://localhost:5173
+      CORS_ORIGINS: http://localhost:3001,http://localhost:5173
       RETENTION_DAYS: 7
       RATE_LIMIT: 100
       ENABLE_WEBSOCKET: true
     ports:
-      - '4000:4000'
+      - '4001:4001'
     volumes:
-      - ./packages/backend/src:/app/src
+      - ./packages/backend/src:/app/packages/backend/src
+      - ./packages/shared:/app/packages/shared/src
       - /app/node_modules
+    working_dir: /app/packages/backend
     command: pnpm dev
 
   # Frontend UI
   frontend:
     build:
-      context: ./packages/frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: packages/frontend/Dockerfile
     container_name: devtools-frontend
     depends_on:
       - backend
     environment:
-      VITE_API_URL: http://localhost:4000/api
+      VITE_API_URL: http://localhost:4001/api
     ports:
-      - '3000:3000'
+      - '3001:3000'
     volumes:
-      - ./packages/frontend/src:/app/src
+      - ./packages/frontend/src:/app/packages/frontend/src
       - /app/node_modules
+    working_dir: /app/packages/frontend
     command: pnpm dev
 
 volumes:
   postgres_data:
   redis_data:
-
