--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U devtools']
+      test: ['CMD-SHELL', 'pg_isready -U devtools -d nest_devtools']
       interval: 10s
       timeout: 5s
       retries: 5
