--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,19 +17,20 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "nest-devtools-shared": "workspace:*",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
-    "@nestjs/websockets": "^10.3.0",
-    "@nestjs/config": "^3.1.1",
     "@nestjs/throttler": "^5.1.1",
+    "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.22.0",
     "axios": "^1.6.5",
-    "class-validator": "^0.14.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "nest-devtools-agent": "^0.1.1",
+    "nest-devtools-shared": "workspace:*",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "socket.io": "^4.6.0"
