chore: bump package version and enhance documentation and validation in DevTools module
- Updated package version from 0.1.3 to 0.1.5 in package.json.
- Added INSTALLATION.md and USAGE_EXAMPLE.md to improve user guidance.
- Implemented basic validation for configuration in DevtoolsModule to ensure required parameters are provided.
- Enhanced README.md with troubleshooting tips and corrected usage examples for better clarity.

--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,12 +1,14 @@
 {
   "name": "nest-devtools-agent",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "Agent de instrumentação NestJS para DevTools Telescope - rastreie requisições, exceções e logs em tempo real",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md",
+    "INSTALLATION.md",
+    "USAGE_EXAMPLE.md",
     "LICENSE"
   ],
   "scripts": {
