chore: update environment configuration and package details
- Added DevTools Agent configuration options to env.example and README.md for improved setup guidance.
- Updated author information in package.json for clarity.
- Bumped version of nest-devtools-agent from 0.1.5 to 0.1.7 in packages/agent/package.json.
- Enhanced backend module to integrate DevTools monitoring with configurable parameters.

--- a/env.example
+++ b/env.example
@@ -35,3 +35,9 @@ ENABLE_WEBSOCKET=true
 # Quando integrar o agent na sua aplicação, use estas URLs:
 # Backend URL: http://localhost:4001
 # Frontend URL: http://localhost:3001
+
+# DevTools Agent Configuration (para apps que importam nest-devtools-agent)
+DEVTOOLS_BACKEND_URL=http://localhost:4001
+DEVTOOLS_TIMEOUT=5000
+DEVTOOLS_MAX_RETRIES=3
+DEVTOOLS_ENABLE_BUFFER=false
