--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-devtools-agent",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Agent de instrumentação NestJS para DevTools Telescope - rastreie requisições, exceções e logs em tempo real",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,8 +47,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
     "reflect-metadata": "^0.1.13 || ^0.2.0",
     "rxjs": "^7.0.0",
     "express": ">=4.0.0",
@@ -60,8 +60,8 @@
     "axios": "^1.6.5"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.3.0",
-    "@nestjs/core": "^10.3.0",
+    "@nestjs/common": "^11.1.0",
+    "@nestjs/core": "^11.1.0",
     "@types/node": "^20.11.0",
     "@types/express": "^4.17.21",
     "reflect-metadata": "^0.2.1",
