chore: bump package version to 0.2.8 and enhance event tracking features
- Updated version of nest-devtools-agent to 0.2.8 for improved package management.
- Added new event tracking capabilities including session, HTTP client, Redis operations, and scheduled jobs.
- Enhanced DevtoolsRequestInterceptor to capture session data and response headers.
- Updated shared types to include new event metadata structures for better event processing and monitoring.

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -23,11 +23,14 @@ COPY packages/shared packages/shared
 COPY packages/backend packages/backend
 
 # Construir shared primeiro (dependência do backend)
+# Instalar dependências localmente no shared para garantir que typescript esteja disponível
 WORKDIR /app/packages/shared
+RUN bun install
 RUN bun run build
 
 # Gerar Prisma Client e build do backend
 WORKDIR /app/packages/backend
+RUN bun install
 RUN bunx prisma generate
 RUN bun run build
 
@@ -36,4 +39,4 @@ EXPOSE 4001
 
 # Comando para desenvolvimento com hot reload
 WORKDIR /app/packages/backend
-CMD ["bun", "dev"]
+CMD ["bun", "run", "dev"]
