--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: devtools
     ports:
       - '5433:5432'
+    networks:
+      - devtools-network
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -24,6 +26,8 @@ services:
     container_name: devtools-redis
     ports:
       - '6380:6379'
+    networks:
+      - devtools-network
     volumes:
       - redis_data:/data
     healthcheck:
@@ -48,18 +52,20 @@ services:
       DATABASE_URL: postgresql://devtools:devtools@postgres:5432/nest_devtools
       REDIS_URL: redis://redis:6379
       DEVTOOLS_API_KEY: ${DEVTOOLS_API_KEY:-changeme-secret-key}
-      CORS_ORIGINS: http://localhost:3001,http://localhost:5173
+      CORS_ORIGINS: http://localhost:3001,http://localhost:5173,http://172.21.0.5:3000,http://localhost:3000
       RETENTION_DAYS: 7
       RATE_LIMIT: 100
       ENABLE_WEBSOCKET: true
     ports:
       - '4001:4001'
+    networks:
+      - devtools-network
     volumes:
       - ./packages/backend/src:/app/packages/backend/src
       - ./packages/shared:/app/packages/shared/src
       - /app/node_modules
     working_dir: /app/packages/backend
-    command: bun dev
+    command: bun run dev
 
   # Frontend UI
   frontend:
@@ -75,12 +81,18 @@ services:
       - PORT=3000
     ports:
       - '3001:3000'
+    networks:
+      - devtools-network
     volumes:
       - ./packages/frontend/src:/app/packages/frontend/src
       - ./packages/shared:/app/packages/shared
       - /app/node_modules
     working_dir: /app/packages/frontend
-    command: bun dev -- --host 0.0.0.0
+    command: bun run dev -- --host 0.0.0.0
+
+networks:
+  devtools-network:
+    driver: bridge
 
 volumes:
   postgres_data:
