--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,7 @@
   "description": "API backend do DevTools Telescope - ingestão e consulta de eventos",
   "scripts": {
     "build": "nest build",
-    "dev": "nest start --watch",
+    "dev": "bunx --bun nest start --watch",
     "start": "node dist/main",
     "start:prod": "node dist/main",
     "clean": "rm -rf dist",
